kubernetes/platform-apps/temporal/_temporal/base/temporal-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal
  namespace: argocd
spec:
  parentRefs:
    - name: temporal-gateway
      namespace: temporal
  hostnames:
    - temporal.konnektr.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: temporal
          port: 8080
